<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@color/primary_color">

<!--Cần đổi lại thành toolbar-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="81dp"
        android:layout_marginTop="-150dp"
        android:layout_marginBottom="100dp"
        android:background="@color/secondary_color"
        android:gravity="center"
        android:text="Resigter"
        android:textSize="30dp"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_login"
            android:textSize="20dp"
            android:layout_marginEnd="5dp"
            android:layout_marginRight="10dp"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:inputType="text"
            android:id="@+id/edt_user_signin"
            android:hint="Enter"
            android:textColor="@color/white"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_login"
            android:layout_marginEnd="46dp"
            android:textSize="20dp"
            android:layout_marginRight="10dp"></TextView>

        <EditText
            android:id="@+id/edt_email_signin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Enter"
            android:inputType="text"
            android:textColor="@color/white"
            android:textSize="30dp"></EditText>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pass_login"
            android:textSize="20dp"
            android:layout_marginRight="10dp"></TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30dp"
            android:inputType="textPassword"
            android:id="@+id/edt_pass_signin"
            android:hint="Enter"
            android:textColor="@color/white"></EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="50dp">

        <Button
            android:id="@+id/bt_create_signin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="Create Account"
            android:textSize="20dp"
            android:layout_weight="1"></Button>

        <Button
            android:id="@+id/bt_login_signin"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:text="Login"
            android:textSize="20dp"
            android:layout_weight="1"></Button>
    </LinearLayout>

</LinearLayout>